Updated files for Project 10.  These files are near final versions

--- a/cosc231/index.html
+++ b/cosc231/index.html
@@ -26,6 +26,8 @@ Developed by Brendan Klein on 9/16/2020
         <a href="../cosc231/Project8.html">Project 8</a>
         <a href="../cosc231/P9A.php">Project 9A</a>
         <a href="../cosc231/P9B.php">Project 9B</a>
+        <a href="../cosc231/Project10A.php">Project 10A</a>
+        <a href="../cosc231/Project10B.php">Project 10B</a>
     <div class="topnavright">
       <a href="../cosc231/P4NavBar.html">About Me</a>
     </div>
@@ -61,12 +63,14 @@ Developed by Brendan Klein on 9/16/2020
   <li class="linktext">Project 4: <a class="link" href="P4NavBar.html">P4NavBar</a> </li>
   <li class="linktext">Project 5: <a class="link" href="GuessMyNumber.html">Guess My Number</a> </li>
   <li class="linktext">Project 5: <a class="link" href="ChangeCalculator.html">Change Calculator</a>
-  <li class="linktext">Project 6: <a class="link" href="Project6A.html">Ball Animation</a> </li>
-  <li class="linktext">Project 6: <a class="link" href="Project6B.html">Specialty Shop</a> </li>
+  <li class="linktext">Project 6A: <a class="link" href="Project6A.html">Ball Animation</a> </li>
+  <li class="linktext">Project 6B: <a class="link" href="Project6B.html">Specialty Shop</a> </li>
   <li class="linktext">Project 7: <a class="link" href="Project7.html">EMU Mall</a> </li>
   <li class="linktext">Project 8: <a class="link" href="Project8.html">JavaScript Objects</a> </li>
   <li class="linktext">Project 9A: <a class="link" href="P9A.php">Dice Rolling Simulator</a> </li>
   <li class="linktext">Project 9B: <a class="link" href="P9B.php">Coin Flip Simulation</a> </li>
+  <li class="linktext">Project 10A: <a class="link" href="Project10A.php">Number Names</a> </li>
+  <li class="linktext">Project 10B: <a class="link" href="Project10B.php">Fahrenheit to Celsius / Celsius to Fahrenheit</a> </li>
 </ul>
 </body>
 </html>
