Updated COSC index for Project 11

--- a/cosc231/index.html
+++ b/cosc231/index.html
@@ -28,6 +28,7 @@ Developed by Brendan Klein on 9/16/2020
         <a href="../cosc231/P9B.php">Project 9B</a>
         <a href="../cosc231/Project10A.php">Project 10A</a>
         <a href="../cosc231/Project10B.php">Project 10B</a>
+        <a href="../cosc231/Project10B.php">Project 11</a>
     <div class="topnavright">
       <a href="../cosc231/P4NavBar.html">About Me</a>
     </div>
@@ -71,6 +72,7 @@ Developed by Brendan Klein on 9/16/2020
   <li class="linktext">Project 9B: <a class="link" href="P9B.php">Coin Flip Simulation</a> </li>
   <li class="linktext">Project 10A: <a class="link" href="Project10A.php">Number Names</a> </li>
   <li class="linktext">Project 10B: <a class="link" href="Project10B.php">Fahrenheit to Celsius / Celsius to Fahrenheit</a> </li>
+  <li class="linktext">Project 11: <a class="link" href="Project11.php">COMING SOON!</a> </li>
 </ul>
 </body>
 </html>
